--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="wrapper">
     <div class="scoreboard">
       <div class="title">
-        <img src="assets/title.png" alt="" />
+        <img src="/assets/title.png" alt="" />
       </div>
       <div class="score">
         <p>SCORE</p>
@@ -30,10 +30,10 @@
         <img src="/assets/Paper.png" alt="" onclick="pickUserHand('paper')" />
       </div>
       <div class="hand scissors">
-        <img src="assets/Scissors.png" alt="" onclick="pickUserHand('scissors')" />
+        <img src="/assets/Scissors.png" alt="" onclick="pickUserHand('scissors')" />
       </div>
       <div class="hand rock">
-        <img src="assets/Rock.png" alt="" onclick="pickUserHand('rock')" />
+        <img src="/assets/Rock.png" alt="" onclick="pickUserHand('rock')" />
       </div>
     </div>
 
@@ -41,7 +41,7 @@
       <div class="userhand">
         <h1>YOU PICKED</h1>
         <div class="handImageContainer">
-          <img id="userPickImage" src="assets/Paper.png" alt="" class="userHandImage" />
+          <img id="userPickImage" src="/assets/Paper.png" alt="" class="userHandImage" />
         </div>
       </div>
       <div class="referee">
@@ -53,7 +53,7 @@
       <div class="computerhand">
         <h1>THE HOUSE PICKED</h1>
         <div class="handImageContainer">
-          <img id="computerPickImage" src="assets/Scissors.png" alt="" class="houseHandImage" />
+          <img id="computerPickImage" src="/assets/Scissors.png" alt="" class="houseHandImage" />
         </div>
       </div>
 </body>
