Fix HTML structure and CSS filename

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
           <img id="computerPickImage" src="./assets/Scissors.png" alt="" class="houseHandImage" />
         </div>
       </div>
+    </div>
+  </div> <!-- Added missing closing div for wrapper -->
 </body>
 
 </html>
