Update project files and fix CSS references

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="stlyes.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <title>Rock Paper Scissors</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -57,7 +57,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- Added missing closing div for wrapper -->
+  </div>
 </body>
 
 </html>
